--- a/package.json
+++ b/package.json
@@ -37,15 +37,12 @@
     "dist"
   ],
   "scripts": {
-    "build": "unbuild",
-    "dev": "unbuild --stub",
+    "build": "tsup src/index.ts --format esm,cjs --dts",
     "lint": "eslint .",
     "prepublishOnly": "nr build",
     "release": "bumpp && npm publish",
-    "start": "esno src/index.ts",
     "test": "vitest",
-    "test:ts": "vitest typecheck",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit && vitest typecheck --run"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.38.4",
@@ -53,13 +50,12 @@
     "@types/node": "^18.15.11",
     "bumpp": "^9.1.0",
     "eslint": "^8.37.0",
-    "esno": "^0.16.3",
     "lint-staged": "^13.2.0",
     "pnpm": "^8.1.1",
     "rimraf": "^4.4.1",
     "simple-git-hooks": "^2.8.1",
+    "tsup": "^6.7.0",
     "typescript": "^5.0.3",
-    "unbuild": "^1.2.0",
     "vite": "^4.2.1",
     "vitest": "^0.29.8",
     "vue": "^3.2.47",
